--- a/liveness/templates/edit.html
+++ b/liveness/templates/edit.html
@@ -1,1 +1,104 @@
-    <h1> Edit </h1>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
+
+    <!-- Bootstrap CSS -->
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
+      integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+      crossorigin="anonymous"
+    />
+    <script
+      src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+      integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"
+      integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
+      integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+      crossorigin="anonymous"
+    ></script>
+    <title>Liveness-Tester</title>
+  </head>
+  <body>
+    <form method="POST" action="/update/{{task.id}}">
+      {% csrf_token %}
+      <div class="container">
+        <h3>Update Folder_Path</h3>
+        <div class="mb-3">
+          <label for="Image Folder Path" class="form-label">Folder Path</label>
+          <input
+            type="text"
+            class="form-control"
+            id="folder_path"
+            name="folder_path"
+            value="{{task.folder_path}}"
+          />
+        </div>
+        <div class="mb-3">
+          <label for="Total Image Count" class="form-label">Image Count</label>
+          <input
+            type="text"
+            class="form-control"
+            name="total_images"
+            value="{{task.total_images}}"
+          />
+        </div>
+        <div class="mb-3">
+          <label for="Skipped Image" class="form-label">SKipped Image</label>
+          <input
+            type="text"
+            class="form-control"
+            id="skipped_images"
+            name="skipped_images"
+            value="{{task.skipped_images}}"
+          />
+        </div>
+        <div class="mb-3">
+          <label for="Live Image" class="form-label">Live Image</label>
+          <input
+            type="text"
+            class="form-control"
+            id="live_images"
+            name="live_images"
+            value="{{task.live_images}}"
+          />
+        </div>
+        <div class="mb-3">
+          <label for="Spoof Images" class="form-label">Spoof Images</label>
+          <input
+            type="text"
+            class="form-control"
+            id="spoof_images"
+            name="spoof_images"
+            value="{{task.spoof_images}}"
+          />
+        </div>
+        <div class="mb-3">
+          <label for="Percentage" class="form-label">Percentage</label>
+          <input
+            type="text"
+            class="form-control"
+            id="live_percentage"
+            name="live_percentage"
+            value="{{task.live_percentage}}"
+          />
+        </div>
+        <button type="submit" class="btn btn-success">Submit</button>
+      </div>
+    </form>
+    <br />
+  </body>
+</html>
