--- a/liveness/templates/index.html
+++ b/liveness/templates/index.html
@@ -3,14 +3,34 @@
   <head>
     <meta charset="UTF-8" />
     <title>Index</title>
-    {% load staticfiles %}
-    <link rel="stylesheet" href="{% static 'css/style.css' %}" />
+    <!-- Bootstrap CSS -->
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
+      integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+      crossorigin="anonymous"
+    />
+    <script
+      src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+      integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"
+      integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
+      integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
-    <form method="POST" class="post-form" action="/test">
+    <form method="POST" class="post-form" action="/get" enctype="multipart/form-data">
       {% csrf_token %}
       <div class="container">
-        <br />
+        <br/>
         <div class="form-group row">
           <label class="col-sm-1 col-form-label"></label>
           <div class="col-sm-4">
@@ -19,11 +39,32 @@
         </div>
         <div class="form-group row">
           <label class="col-sm-2 col-form-label">Enter Folder Path Here </label>
-          <div class="col-sm-4">{{ form.folder_name}}</div>
+          <div class="col-sm-4">{{ form.folder_path}}</div>
         </div>
         <div class="form-group row">
           <label class="col-sm-2 col-form-label">Get Image Count</label>
           <div class="col-sm-4">{{ form.total_images}}
+          </div>
+        </div>
+        <div class="form-group row">
+          <label class="col-sm-2 col-form-label">Get Image Count</label>
+          <div class="col-sm-4">{{ form.skipped_images}}
+          </div>
+        </div>
+        <div class="form-group row">
+          <label class="col-sm-2 col-form-label">Get Image Count</label>
+          <div class="col-sm-4">{{ form.live_images}}
+          </div>
+        </div>
+        <div class="form-group row">
+          <label class="col-sm-2 col-form-label">Get Image Count</label>
+          <div class="col-sm-4">{{ form.spoof_images}}
+          </div>
+        </div>
+
+        <div class="form-group row">
+          <label class="col-sm-2 col-form-label">Get Image Count</label>
+          <div class="col-sm-4">{{ form.live_percentage}}
           </div>
         </div>
 
