--- a/liveness/templates/result.html
+++ b/liveness/templates/result.html
@@ -1,1 +1,79 @@
-<h1>Result page </h1>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <!-- Bootstrap CSS -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+      crossorigin="anonymous"
+    />
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+      crossorigin="anonymous"
+    ></script>
+    <title>Liveness-Tester</title>
+  </head>
+  <body>
+      <br>
+    <div class="container">
+      <center><h4>Folder_Result</h4> </center>
+    <ul class="list-group">
+        <li class="list-group-item"> <b> Folder path  :-> </b>   {{ task.folder_path }} </li>
+        <li class="list-group-item"><b>Total Images :->   </b>   {{ task.total_images}}</li>
+        <li class="list-group-item"><b>Skipped Images :-> </b>   {{ task.skipped_images }}</li>
+        <li class="list-group-item"><b>Live Images :->    </b>   {{ task.live_images }} </li>
+        <li class="list-group-item"><b>Spoof Images :->    </b>   {{ task.spoof_images }} </li>
+        <li class="list-group-item"><b>Percentage :->     </b>  {{ task.live_percentage }} % </li>
+      </ul>
+      <b> <p> Total {{ task.total_images }} images are in given folder  <br>
+    </div>
+
+    <hr>
+    <center><h4> Detailed Image Result </h4></center>
+    <hr>
+
+    <div>
+      <table class="table table-striped">
+        <thead class="thead-dark" style="text-align:center">
+          <tr>
+            <th scope="col">ID</th>
+            <th scope="col">Image Name</th>
+            <th scope="col">Genrated_Label</th>
+            <th scope="col">Score</th>
+            <th scope="col">Predict_age</th>
+            <th scope="col">Confid_age</th>
+            <th scope="col">Predict_Gender</th>
+            <th scope="col">Confid_Gender</th>
+            <th scope="col">Type</th>
+
+          </tr>
+        </thead>
+        <tbody>
+          {% for result in results %}
+          <tr>
+            <th scope="row">{{ result.id }}</th>
+            <td>{{result.image_name}}</td>
+            <td>{{ result.label }}</td>
+            <td>{{ result.score }}</td>
+            <td>{{ result.prediction_age }}</td>
+            <td>{{ result.confidence_age }}</td>
+            <td>{{ result.prediction_gender }}</td>
+            <td>{{ result.confidence_gender }}</td>
+            <td>{{ result.title }}</td>
+          </tr>
+          {% endfor %}
+        </tbody>
+      </table>
+
+
+      <br>
+      <hr>
+      <br>
+    </div>
+  </body>
+</html>
