--- a/liveness/templates/show.html
+++ b/liveness/templates/show.html
@@ -1,35 +1,99 @@
-<html lang="en">  
-<head>  
-    <meta charset="UTF-8">  
-    <title>Folder Records</title>  
-     {% comment %} {% load staticfiles %}  
-    <link rel="stylesheet" href="{% static 'css/style.css' %}"/>   {% endcomment %}
-</head>  
-<body>  
-<table class="table table-striped table-bordered table-sm">  
-    <thead class="thead-dark">  
-    <tr>  
-        <th>Folder Path</th>  
-        <th>Image Count</th>  
-        <th>Actions</th>  
-    </tr>  
-    </thead>  
-    <tbody>  
-{% for task in tasks %}  
-    <tr>  
-        <td>{{ task.folder_name }}</td>  
-        <td>{{ task.total_images }}</td>  
-        
-        <td>  
-        <a href="/result/{{ task.id }}"><span class="glyphicon glyphicon-pencil" >Result</span></a>  
- 
-        </td>   
-    </tr>  
-{% endfor %}  
-    </tbody>  
-</table>  
-<br>  
-<br>  
-<center><a href="/get" class="btn btn-primary">Add New Folder path</a></center>  
-</body>  
-</html>  
+{% comment %}
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <title>Folder Records</title>
+    {% load static %}
+    <link rel="stylesheet" href="{% static 'css/style.css' %}" />
+  </head>
+  <body>
+    <table class="table table-striped table-bordered table-sm">
+      <thead class="thead-dark">
+        <tr>
+          <th>Folder Path</th>
+          <th>Image Count</th>
+          <th>Actions</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>{{ task.folder_path }}</td>
+          <td>{{ task.total_images }}</td>
+
+          <td>
+            <a href="/result/{{ task.id }}"
+              ><span class="glyphicon glyphicon-pencil">Result</span></a
+            >
+          </td>
+        </tr>
+      </tbody>
+    </table>
+    <br />
+    <br />
+  </body>
+</html>
+{% endcomment %}
+
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <!-- Bootstrap CSS -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+      crossorigin="anonymous"
+    />
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+      crossorigin="anonymous"
+    ></script>
+    <title>Liveness-Tester</title>
+  </head>
+  <body>
+      <br>
+    <div class="container">
+
+      <table class="table table-striped">
+        <thead class="thead-dark">
+          <tr>
+            <th scope="col">ID</th>
+            <th scope="col">Folder Path</th>
+            <th scope="col">Image_count</th>
+            <th scope="col">Actions</th>
+          </tr>
+        </thead>
+        <tbody>
+          {% for task in tasks %}
+          <tr>
+            <th scope="row">{{ task.id }}</th>
+            <td>{{task.folder_path}}</td>
+            <td>{{ task.total_images }}</td>
+            <td>
+              <button type="button" class="btn btn-outline-success">
+                <a
+                  style="text-decoration: none; text-color: white"
+                  href="/result/{{ task.id }}"
+                  >Result</a
+                >
+              </button> 
+              
+              <button type="button" class="btn btn-outline-danger">
+                <a
+                  style="text-decoration: none; text-color: white"
+                  href="/edit/{{ task.id }}"
+                  >Edit</a
+                >
+              </button>
+            </td>
+          </tr>
+          {% endfor %}
+        </tbody>
+      </table>
+    </div>
+  </body>
+</html>
