--- a/liveness/templates/show.html
+++ b/liveness/templates/show.html
@@ -56,6 +56,9 @@
   </head>
   <body>
       <br>
+      <center><h2> Liveness Tester</h3></center>
+      
+        <hr>
     <div class="container">
 
       <table class="table table-striped">
@@ -95,5 +98,10 @@
         </tbody>
       </table>
     </div>
+    {% comment %} <script>
+      function showMessage() {
+        alert("Image Processing Started !!!!!!!!! ");
+      }
+      </script> {% endcomment %}
   </body>
 </html>
