--- a/liveness/templates/index.html
+++ b/liveness/templates/index.html
@@ -69,6 +69,13 @@
         </div>
 
         <div class="form-group row">
+          <label class="col-sm-2 col-form-label">Image pass here</label>
+          <div class="col-sm-4">{{ form.thumbnail}}
+          </div>
+        </div>
+
+
+        <div class="form-group row">
           <label class="col-sm-1 col-form-label"></label>
           <div class="col-sm-4">
             <button type="submit" class="btn btn-primary">Submit</button>
